# trios

./: setup.py  triosv2.md
python/trios/: build.py  detect.py  imageset.py  two_level.py
trios/contrib/cnn/: CNN_Estimator.py  CNN_TFClassifier.py  Operator_Estimator.py  README.md  TFClassifier.py  cnn_trioslib.ipynb
trioslib/: CMakeLists.txt
trioslib/include/: trios_appl.h  trios_img.h  trios_imgset.h  trios_mtm.h  trios_multi.h  trios_operator.h
trioslib/src/: CMakeLists.txt
trioslib/src/appl/: CMakeLists.txt  appl_gg.c  appl_multi.c  operator.c
trioslib/src/basic/: basic_img.c  basic_imgset.c  basic_multi.c
trioslib/src/collec/: collec_xpl.c  collec_xpl_gg.c  collec_xpl_multi_level.c
trioslib/src/dt/: CARTTrainer.cpp  CMakeLists.txt  integration.cpp  shark_dt.h
trioslib/src/dt/include/shark/Algorithms/Trainers/: CARTTrainer.h
trioslib/src/dt/include/shark/Core/: Shark.h
trioslib/src/dt/include/shark/Core/utility/Impl/.svn/: entries
trioslib/src/dt/include/shark/LinAlg/BLAS/Impl/numeric_bindings/.svn/: entries
trioslib/src/dt/include/shark/LinAlg/BLAS/Impl/numeric_bindings/atlas/.svn/: entries
trioslib/src/io/: io_imgset.c  io_mtm.c  io_multi.c  io_operator.c
trioslib/src/learn/: CMakeLists.txt  accuracy.c  multi_level.c  operator.c  train_gg.c
trioslib/src/opencv_interface/: apply.cpp  opencv_interface.h  training.cpp
trioslib/test/: trios_applic_test.c
trioslib/tools/: trios_build.c
v2/: CMakeLists.txt  dataset.c  dataset.h  dataset_io.c  error.c  error.h  img.c  img.h  img_io.c  io_header.c  io_header.h  operator.c  operator.h  trios_common.h  trios_misc.h  window.c
v2/operators/: CMakeLists.txt
v2/operators/ISI/: CMakeLists.txt
v2/unit_tests/: CMakeLists.txt  trios_img_test.c
(+2 files in other folders)
